Refactored code. JUnit's tests are broken.